修改部分内容

--- a/ini/config.ini
+++ b/ini/config.ini
@@ -1,6 +1,8 @@
 [vote]
 vote_url = 投票url
+;获取单条代理地址的url
 vote_getproxyurl = http://tpv.daxiangdaili.com/ip/?tid=558042206628012&num=1&delay=5&sortby=time&filter=on
+;投票数量（可能有误差，视进程数而定）
 vote_number = 2
 
 
