http://p.ashtwo.cn/获取免费proxy

--- a/ini/config.ini
+++ b/ini/config.ini
@@ -1,5 +1,6 @@
 [vote]
-vote_url = 投票url
+;此处url返回一个json对象，里面有result=1 投票成功，result=0投票失败
+vote_url = http://www.lgbzj.com/plugin.php?id=jw_shgame&mod=praise&works_id=894
 ;获取单条代理地址的url
 vote_getproxyurl = http://tpv.daxiangdaili.com/ip/?tid=558042206628012&num=1&delay=5&sortby=time&filter=on
 ;投票数量（可能有误差，视进程数而定）
