--- a/ini/config.ini
+++ b/ini/config.ini
@@ -4,6 +4,8 @@ vote_url = http://www.lgbzj.com/plugin.php?id=jw_shgame&mod=praise&works_id=69
 ;获取单条代理地址的url
 vote_getproxyurl = http://tpv.daxiangdaili.com/ip/?tid=558042206628012&num=1&delay=5&sortby=time&filter=on
 ;投票数量（可能有误差，视进程数而定）
-vote_number = 410
+vote_number = 1300
 ;适合返回一个网页只含有一个代理IP的情况，用正则表达式提取
 vote_p_ashtwo_cn = http://p.ashtwo.cn
+;json形式获取
+pubproxy_com_api_proxy = http://pubproxy.com/api/proxy
